--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
