--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.16.0",
+    "razorpay": "^2.9.6"
   }
 }
