--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
+    "framer-motion": "^12.7.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.1",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
