--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "prettier": "^3.5.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
