--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.1",
     "framer-motion": "^12.7.2",
+    "hls.js": "^1.6.2",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
