--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.8"
   },
